--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
